# ListingIQ

./: .dockerignore  .env.example  .gitignore  BRAINSTORM.md  Dockerfile  Procfile  README.md  nixpacks.toml  pyproject.toml  railway.toml  render.yaml
config/: default.toml
docs/plans/: 2026-03-03-feature-roadmap-design.md  2026-03-03-feature-roadmap-implementation.md  2026-03-05-rentcast-integration-design.md  2026-03-05-rentcast-integration.md  2026-03-05-repliers-migration-design.md  2026-03-05-repliers-migration-plan.md  2026-03-13-granular-search-design.md  2026-03-13-granular-search-implementation.md
listingiq/: __init__.py  asgi.py  cli.py  config.py  models.py  scheduler.py
listingiq/alerts/: __init__.py  channels.py  dispatcher.py
listingiq/analysis/: __init__.py  brrr.py  cashflow.py  engine.py  flip.py  offer.py  points.py  room_potential.py
listingiq/api/: __init__.py  server.py
listingiq/comps/: __init__.py  rental.py  sales.py
listingiq/db/: __init__.py  repository.py  tables.py
listingiq/scrapers/: __init__.py  base.py  realtor.py  redfin.py  rentcast.py  repliers.py  zillow.py
tests/: test_alerts.py  test_analysis.py  test_api.py  test_comps.py  test_config.py  test_db.py  test_models.py  test_offer.py  test_points.py  test_room_potential.py  test_scrapers.py
